@@ -7,6 +7,8 @@
 Close stdout when running child processes for users running startx from the
 console, since some terminal applications try to read from the console,
 freezing X (Keith R. John Warno).
+Forward scroll events on pinboard to window manager, and add option to
+workaround *box issues (Matthew Weier O'Phinney).
 
 24-Apr-2003
 ~~~~~~~~~~~
